tests/good/restart1.lens
stream (e in log.a)  {
       print(1)
}

stream {
       print(e.message)
}

restart log.a

stream (e in log.a)  {
       print(2)
}

restart log

stream {
       print(e.message)
}

