tests/bad/warning_restart.lens
stream (e in log.a) when (e) {
       print(1)
}

stream {
       print(entry.message)
}

stream (e in log.a) when (e) {
       print(2)
}

{}

stream {
       print(entry.message)
}

